--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
-<div class="img_one">
-<p></p>
+<div class="img_one"> 
+   <%= image_tag "caile/party.jpeg", class: "image_one_main" %>
 </div>
 <div class="entry">
-  <p>Entry</p>
+  <button class="button">Empezar Evento</button>
 </div>
