--- a/app/views/shared/_caile_navbar.html.erb
+++ b/app/views/shared/_caile_navbar.html.erb
@@ -1,24 +1,25 @@
 <div class="logo">
 
-  <%= image_tag("caile/dance.png", size: '25x25') %>
+  <%= image_tag("caile/dance.png", size: '40x40') %>
+  <p> &nbsp;&nbsp; </p>
   <%= link_to ' Caile!', root_path %>
 </div>
 
 <div class="menu">
   <ul class="menu_options">
     <li class="menu_options_item">
-        <a href="" class="menu_options_item_link">le caigo a una fiesta</a>
+        <a href="" class="menu_options_item_link">Invitado</a>
     </li>
     <li class="menu_options_item">
-        <a href="" class="menu_options_item_link">Armo una fiesta</a>
-    </li>
-    
-    <li class="menu_options_item">
-        <a href="" class="menu_options_item_link">Farms</a>
+        <a href="" class="menu_options_item_link">Crear Evento</a>
     </li>
     
     <li class="menu_options_item">
-        <a href="" class="menu_options_item_link">Publishing</a>
+        <a href="" class="menu_options_item_link"> --- </a>
+    </li>
+    
+    <li class="menu_options_item">
+        <a href="" class="menu_options_item_link">Registrase</a>
     </li>
     
   </ul>
