--- a/app/assets/stylesheets/abstracts/mixins.scss
+++ b/app/assets/stylesheets/abstracts/mixins.scss
@@ -1,3 +1,10 @@
+@mixin center-flex-column {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
 $pink-color: #FA86BE;
 $purple-color: #A275E3;
 $green-color: #9AEBED;
@@ -5,5 +12,6 @@ $yellow-color: #FFFCAB;
 $black: black;
 $white: white;
 $medium-shadow: 0 0 5px $black;
-    
-/* $bkg-color: rgba($yellow-color, 0.48); */
+
+
+
