--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -1,73 +1,69 @@
 .container {
     display: grid;
-    grid-template-rows: 90px 1fr 90px;
+    grid-template-rows: 100px 1fr 90px;
     min-height: 100vh;
     background-color: $yellow-color;
-    
 }
-
 .content {
     display: grid;
    /* grid-template-columns: 1fr 1fr 1fr; */
     grid-template-rows: 70% auto;
-    grid-area: "img_one"
-               "entry";
-   
+    grid-area: “img_one”
+               “entry”;
 }
-
+.entry {
+    @include center-flex-column;
+}
 .img_one {
-    display: grid;
+    width: 100%;
+    display: flex;
+    height: 100%;
     justify-content: center;
-    align-self: center;
 }
 
-
+.image_one_main {
+    height: 100%;
+    width: 100%;
+}
 .navbar {
     display:grid;
-    grid-template-columns: 100px auto 100px;
-    grid-area: "logo menu burger";
+    grid-template-columns: 120px auto 100px;
+    grid-area: “logo menu burger”;
     padding: .3rem;
     background-color: $purple-color;
 }
-
 .logo {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    font-size: 1.4rem;
 }
-
 .menu {
     display: flex;
     color: $green-color;
-    
 }
-
 .menu_options {
     display:flex;
     align-items: center;
     justify-content: space-between;
-   
-    
     gap: 3rem;
-    
 }
-
 .menu_options_item {
     list-style-type:none;
-  
 }
-
 .menu_options_item_link {
-    color: $green-color;
-  
+    color: $white;
 }
-
 .footer {
     display:flex;
     padding: .3rem;
     background-color: $purple-color;
     justify-content: center;
     align-items: center;
+}
 
+.footer p {
+    color: white;
+    font-size: 1rem;
 }
