--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -1,37 +1,48 @@
 .container {
     display: grid;
-    grid-template-rows: 100px 1fr 90px;
+    grid-template-rows: 90px 1fr 90px;
     min-height: 100vh;
     background-color: $yellow-color;
 }
+
 .content {
     display: grid;
-   /* grid-template-columns: 1fr 1fr 1fr; */
+    /* grid-template-columns: 1fr 1fr 1fr; */
     grid-template-rows: 70% auto;
-    grid-area: “img_one”
-               “entry”;
+    grid-area: "img_one"
+               "entry";
 }
+
 .entry {
     @include center-flex-column;
 }
+
 .img_one {
     width: 100%;
     display: flex;
     height: 100%;
     justify-content: center;
+    background-image: url('caile/party.jpeg');
+    
 }
 
 .image_one_main {
     height: 100%;
     width: 100%;
+ 
+    /* background-image: url('caile/party.jpeg');*/
+    
 }
+
+
 .navbar {
-    display:grid;
-    grid-template-columns: 120px auto 100px;
-    grid-area: “logo menu burger”;
+    display: grid;
+    grid-template-columns: 100px auto 100px;
+    grid-area: "logo menu burger";
     padding: .3rem;
     background-color: $purple-color;
 }
+
 .logo {
     display: flex;
     flex-direction: row;
@@ -39,6 +50,7 @@
     justify-content: center;
     font-size: 1.4rem;
 }
+
 .menu {
     display: flex;
     color: $green-color;
@@ -55,6 +67,7 @@
 .menu_options_item_link {
     color: $white;
 }
+
 .footer {
     display:flex;
     padding: .3rem;
@@ -64,6 +77,7 @@
 }
 
 .footer p {
+    display: flex;
     color: white;
     font-size: 1rem;
 }
