--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,9 @@
 <div class="img_one"> 
-   <%= image_tag "caile/party.jpeg", class: "image_one_main" %>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+    
 </div>
 <div class="entry">
   <button class="button">Empezar Evento</button>
 </div>
+
