Add a transitional event

--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -22,7 +22,7 @@
     display: flex;
     height: 100%;
     justify-content: center;
-    background-image: url('caile/party.jpeg');
+    background-image: url('caile/wall_paper.png');
     
 }
 
