--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,8 @@
     
 </div>
 <div class="entry">
-  <button class="button">Empezar Evento</button>
+  <!-- <button class="button">Empezar Evento</button> -->
+   
+   <%= link_to 'Empezar Evento', entries_index_path, class: "button" %>
 </div>
 
