--- a/app/assets/stylesheets/abstracts/vars.scss
+++ b/app/assets/stylesheets/abstracts/vars.scss
@@ -1,5 +1,6 @@
-$pink-color: #FA86BE;
-$purple-color: #A275E3;
+$background-color: #F3C5C5;
+$button-color: #898AA6;
+$purple-color: #C1A3A3;
 $green-color: #9AEBED;
 $yellow-color: #FFFCAB;
 $black: black;
