--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,36 @@
-<% if !user_signed_in?  %> 
-    <h2>Casí listo..</h2>
+<div class="img_one">
+    <div class="devise-container">
+        <% if !user_signed_in?  %> 
+            <h2>Casí listo..</h2>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+            <%= form_for resource, as: resource_name, url: registration_path(resource_name), class:"entry-form" do |f| %>
+                <%= render "devise/shared/error_messages", resource: resource %> 
 
-    <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+                <%= f.label :email %><br />
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input-form" %>
+            
+
+                <%= f.label :password %>
+                <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "new-password", class: "input-form" %>
+
+            x
+                <%= f.label :password_confirmation %><br />
+                <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input-form" %>
+        
+
+            <div class="entry-submit">
+        
+                <%= f.submit "Sign up", class: "button" %>
+        
+            </div>
+            <% end %>
+
+            
+        <% else %>
+        <%= render "devise/shared/links" %>
+        <% end %>
     </div>
-
-    <div class="field">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
-
-    <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
-
-    <div class="actions">
-        <%= f.submit "Sign up" %>
-    </div>
-    <% end %>
-
-    
-<% else %>
-  <%= render "devise/shared/links" %>
-<% end %>
+</div>
