--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,18 +1,22 @@
 <div class="img_one">
-   <%= form_with model: Entry.new do |f| %>
-        <%= f.label "Título" %><br/>
-        <%= f.text_field :title %><br/>
-        
-        <%= f.label "Description" %><br/>
-        <%= f.text_field :description %><br/>
+    <div class= "devise-container">
+    <%= form_with model: Entry.new , class:"entry-form" do |f|  %>
+            
+                <%= f.label "Título" %><br/>
+                <%= f.text_field :title, class: "input-form" %><br/>
+                
+                <%= f.label "Description" %><br/>
+                <%= f.text_field :description, class: "input-form" %><br/>
 
-        <%= f.label "Fecha del evento" %><br/>
-        <%= f.date_field :event_date %><br/>
+                <%= f.label "Fecha del evento" %><br/>
+                <%= f.date_field :event_date, class: "input-form" %><br/>
 
-        <%= f.label "A que hora será el vento?" %><br/>
-        <%= f.time_field :event_time %><br/>
-
-        <%= f.submit "Enviar" %> 
-    <% end %>
-   
+                <%= f.label "A que hora será el vento?" %><br/>
+                <%= f.time_field :event_time, class: "input-form" %><br/>
+          
+            <div class="entry-submit">
+              <%= f.submit "Enviar", class:"button" %>
+            </div> 
+        <% end %>
+    </div>  
 </div>
