--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-rows: 90px 1fr 90px;
     min-height: 100vh;
-    background-color: $yellow-color;
+    background-color: $background-color;
 }
 
 .content {
@@ -22,7 +22,7 @@
     display: flex;
     height: 100%;
     justify-content: center;
-    background-image: url('caile/wall_paper.png');
+    background-color: $background-color;
     
 }
 
