--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,11 @@
 <div class="img_one">
     <div class="devise-container">
         <% if !user_signed_in?  %> 
-            <h2>Casí listo..</h2>
+            <% if TEMP_MODEL.length > 0 %>
+               <h2>Casí listo..</h2>
+            <% else %>
+               <h2>Comencemos..</h2>
+            <% end %>   
 
             <%= form_for resource, as: resource_name, url: registration_path(resource_name), class:"entry-form" do |f| %>
                 <%= render "devise/shared/error_messages", resource: resource %> 
