--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,21 @@
 <div class="img_one"> 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
+ <div class="core-message-content">
+    <div class="main-messesage">
+        <h3>Las cosas para que salgan bien hay que prepararlas</h3>
+    </div><br/>
+    <div class="image-main-message">
+
+    <%= image_tag("caile/party.jpeg", size: '750x300') %>
+        
+    </div><br/>
+
+    <div class="main-messesage">
+        <h3>Tus invitados lo agradecerán</h3>
+    </div>
+ </div>
+
     
 </div>
 <div class="entry">
