--- a/app/views/shared/_caile_navbar.html.erb
+++ b/app/views/shared/_caile_navbar.html.erb
@@ -14,6 +14,10 @@
         <li class="menu_options_item">
           <%= link_to 'Lista de invitados', invites_path, class: "menu_options_item_link"  %>
         </li>
+
+         <li class="menu_options_item">
+          <%= link_to 'Mis eventos crados', events_path, class: "menu_options_item_link"  %>
+        </li>
         <li class="menu_options_item">
           <%= link_to 'Crear Evento', events_new_path, class: "menu_options_item_link"  %>
         </li>
