fix events report

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -6,7 +6,7 @@
                 <%= f.label "Título" %><br/>
                 <%= f.text_field :title, class: "input-form" %><br/>
                 
-                <%= f.label "Description" %><br/>
+                <%= f.label "Descripcion" %><br/>
                 <%= f.text_field :description, class: "input-form" %><br/>
 
                 <%= f.label "Fecha del evento" %><br/>
