--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -7,7 +7,7 @@
   <%= f.label "Título" %><br/>
     <%= f.text_field :title, class: "input-form" %><br/>
 
-    <%= f.label "Description" %><br/>
+    <%= f.label "Descripción" %><br/>
     <%= f.text_field :description, class: "input-form" %><br/>
 
     <%= f.label "Fecha del evento" %><br/>
@@ -16,7 +16,7 @@
     <%= f.label "A que hora será el vento?" %><br/>
     <%= f.time_field :event_time, class: "input-form" %><br/>
 
-    <%= f.label "Id de Usuario" %><br/>
+    <%= f.label "Folio del organizador del evento" %><br/>
     <%= f.number_field :user_id, value:"#{current_user.id}", class: "input-form" %><br/>
 
     <div class="entry-submit">
