--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
     </div><br/>
     <div class="image-main-message">
 
-    <%= image_tag("caile/party.jpeg", size: '750x300') %>
+    <%= image_tag("caile/reuniones.jpg", size: '750x300') %>
         
     </div><br/>
 
