--- a/app/views/shared/_caile_navbar.html.erb
+++ b/app/views/shared/_caile_navbar.html.erb
@@ -16,14 +16,14 @@
         </li>
 
          <li class="menu_options_item">
-          <%= link_to 'Mis eventos crados', events_path, class: "menu_options_item_link"  %>
+          <%= link_to 'Mis eventos creados', events_path, class: "menu_options_item_link"  %>
         </li>
         <li class="menu_options_item">
-          <%= link_to 'Crear Evento', events_new_path, class: "menu_options_item_link"  %>
+          <%= link_to 'Crear evento', events_new_path, class: "menu_options_item_link"  %>
         </li>
 
         <li class="menu_options_item">
-          <%= link_to 'Escoger Invitados', invites_new_path, class: "menu_options_item_link"  %>
+          <%= link_to 'Agregar Invitados', invites_new_path, class: "menu_options_item_link"  %>
         </li>
 
 
